content/09a-helm-gateway-api/api-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: api

spec:
  type: ClusterIP
  selector:
    app: nanomon-api
  ports:
    - protocol: TCP
      port: 8000
