content/09a-helm-gateway-api/frontend-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: frontend

spec:
  type: ClusterIP
  selector:
    app: nanomon-frontend
  ports:
    - protocol: TCP
      port: 8001
